--- a/Part1.Rmd
+++ b/Part1.Rmd
@@ -1,30 +1,70 @@
 ---
-title: 'Part 1: Simple Simulation'
-author: "JRB"
+title: 'A study of sample mean and variance statistics for the exponential distribution as convergent estimates for population parameters using R simulation'
+author: "Jean-Remy Behaeghel"
 date: "September 16, 2016"
-output: pdf_document
+output: html_document
 ---
+The assignment:
+Sample Project Report Structure
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+Of course, there are multiple ways one could structure a report to address the requirements above. However, the more clearly you pose and answer each question, the easier it will be for reviewers to clearly identify and evaluate your work.
+
+A sample set of headings that could be used to guide the creation of your report might be:
+
+Title (give an appropriate title) and Author Name
+Overview: In a few (2-3) sentences explain what is going to be reported on.
+Simulations: Include English explanations of the simulations you ran, with the accompanying R code. Your explanations should make clear what the R code accomplishes.
+Sample Mean versus Theoretical Mean: Include figures with titles. In the figures, highlight the means you are comparing. Include text that explains the figures and what is shown on them, and provides appropriate numbers.
+Sample Variance versus Theoretical Variance: Include figures (output from R) with titles. Highlight the variances you are comparing. Include text that explains your understanding of the differences of the variances.
+Distribution: Via figures and text, explain how one can tell the distribution is approximately normal.
 #PART 1: Simulation 
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-library(dplyr);library(knitr);library(pander)
-require(broom);require(stargazer)
+library(dplyr);library(knitr);library(pander);library(ggplot2)
 panderOptions('digits',2)
 panderOptions('round',2)
 ```
+#Overview  
+In this report we will draw 1000 samples of 40 exponentials. We will evaluate the sample mean and sample variance of those sample against the theoretical mean and variance. Lastly we will compare the distribution of the samples and variance means against a normal distribution and attempt the verify the central limit theorem.  
 
-````{r simpleSim, echo=FALSE}
-set.seed(100)
+#Simulation
+The simulation code is straight forward, we will draw 40 exponentials using `rexp` with a parameter $\lambda$ = 0.2 and calculate its mean, repeat the draw and sample mean calculation a 1,000 times. Each calculated mean will be stored in a result vector. We can then use the result vector for the remainder of the exercise. The simulation vectore will contains 1000 samples of size 40 of exponentials.
+
+
+
+Sample mean and sample variance of iid random variables are consistent... they converge to the population mean and population variance
+````{r simpleSim, echo=TRUE}
+set.seed(100) ## So we can repeat the experience with the same reuslts
+lambda <- 0.2 ##Parameter for the exponential distribution
+n <- 40 #sample size
+nsims <- 1000 # number of simulations to run
 mns <- NULL
-for (i in 1:1000) mns <- c(mns, mean(rexp(40,0.2)))
-#hist(mns)
-#abline(v=mean(mns),col="red",lwd=7)
-#mean(mns)
+vars <- NULL
+for (i in 1:nsims) {sam <- rexp(n,lambda); mns <- c(mns,mean(sam));vars<-c(vars,var(sam))} #running the simulation
+dfsim <- data.frame(mns,vars) ## create a data frame with two columns, one for the means and one for the vars
+colnames(dfsim) <- c("mns","vars")
+# hist(mns)
+# abline(v=mean(mns),col="red",lwd=7)
+# abline(v=1/lambda,col="blue",lwd=7)
+# hist(vars)
+# abline(v=mean(vars),col="red",lwd=7)
+# abline(v=(1/lambda)^2,col="blue",lwd=7)
 #samplevar = sd(mns)
 ````
-_____
+## Sample mean and theoretical mean  
+
+We will first plot the sample means as an histogram and density function.  
+```{r Graphing the mean, echo=FALSE}
+gmns <- ggplot(data=dfsim,aes(x=mns,y=..density..))
+gmns <- gmns + geom_histogram(binwidth=0.5, fill=I("cornsilk"), color="grey60") + 
+               geom_density(color="blue")
+gmns <- gmns + theme_minimal()
+gmns <- gmns + ggtitle("Histogram of Sample Means for Exponetials \n (1000 sample means from samples of size 40)")
+gmns <- gmns + xlab("mean") + ylab("")
+gmns <- gmns + geom_vline(xintercept=mean(mns),color="red",linetype="dotdash",size=2) + geom_vline(xintercept=1/lambda,size=1)
+print(gmns)
+```
+
+The sample mean is `r round(mean(mns),2)`.  
+The population mean is `r round(1/lambda,2)`
